@@ -42,3 +42,25 @@
 ## 1、-XX:+PrintGCDetails
 &emsp;&emsp;该选项用于记录GC运行时的详细数据信息并输出，是最基本、使用最普遍的一个选项。  
 这个选项适用于所有GC，输出内容主要包括新生成对象占用内存大小以及耗费时间、各年龄代的情况、每次回收的对应数据等。
+&nbsp;&nbsp;
+&nbsp;&nbsp;
+
+## 2、-Xloggc
+&emsp;&emsp;以文件的形式保存GC日志。  
+可以在JVM的运行选项里添加-XX:+PrintGCDetails -XX:+PrintGCTimeStamps -verbose:gc -Xloggc:gc.log
+```shell
+Java HotSpot(TM) 64-Bit Server VM (25.202-b08) for windows-amd64 JRE (1.8.0_202-b08), built on Dec 15 2018 19:54:30 by "java_re" with MS VC++ 10.0 (VS2010)
+Memory: 4k page, physical 16653508k(9071560k free), swap 19143876k(9693800k free)
+CommandLine flags: -XX:InitialHeapSize=266456128 -XX:MaxHeapSize=4263298048 -XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:-UseLargePagesIndividualAllocation -XX:+UseParallelGC 
+Heap
+ PSYoungGen      total 76288K, used 27530K [0x000000076b500000, 0x0000000770a00000, 0x00000007c0000000)
+  eden space 65536K, 42% used [0x000000076b500000,0x000000076cfe2850,0x000000076f500000)
+  from space 10752K, 0% used [0x000000076ff80000,0x000000076ff80000,0x0000000770a00000)
+  to   space 10752K, 0% used [0x000000076f500000,0x000000076f500000,0x000000076ff80000)
+ ParOldGen       total 175104K, used 0K [0x00000006c1e00000, 0x00000006cc900000, 0x000000076b500000)
+  object space 175104K, 0% used [0x00000006c1e00000,0x00000006c1e00000,0x00000006cc900000)
+ Metaspace       used 8652K, capacity 8946K, committed 9088K, reserved 1056768K
+  class space    used 1060K, capacity 1115K, committed 1152K, reserved 1048576K
+
+```
+
